*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.6 ===

=== 1.0.5 ===
* Additional macro definitions in types.h header.
* Added new status constants in status.h header. 

=== 1.0.4 ===
* Updated build system.
* Modified module versioning support.

=== 1.0.3 ===
* Updated build scripts.
* Added versioning support.

=== 1.0.2 ===
* Added debugging header and functions.

=== 1.0.1 ===
* Added some wrappers for standard C library.
* Added basic atomic manipulation functions.
* Added endianess manipulation functions.
* Added bit manipulation functions.
* Added pointer alignment and aligned pointer allocation routines.

=== 1.0.0 ===
* This is initial release of LSP common library for further enhancements and updates.