@@ -3,6 +3,9 @@
 *******************************************************************************
 
 === 1.0.6 ===
+* Added lsp_limit method.
+* Updated build system.
+* Changed exports.
 
 === 1.0.5 ===
 * Additional macro definitions in types.h header.
